--- a/app/src/main/res/layout/activity_site_page.xml
+++ b/app/src/main/res/layout/activity_site_page.xml
@@ -61,6 +61,15 @@
         app:layout_constraintTop_toBottomOf="@+id/site_page_image" />
 
     <Button
+        android:id="@+id/add_to_favourite"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:text="Add to Favourites"
+        app:layout_constraintBottom_toTopOf="@+id/add_to_route"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent" />
+
+    <Button
         android:id="@+id/add_to_route"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
@@ -68,6 +77,7 @@
         app:layout_constraintBottom_toTopOf="@+id/bottom_navigation"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent" />
+
     <com.google.android.material.bottomnavigation.BottomNavigationView
         android:id="@+id/bottom_navigation"
         android:layout_width="match_parent"
